deployment/stacks/service/base/template/proxy/uec-dos-api-cs-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: uec-dos-api-cs-proxy
  name: uec-dos-api-cs-proxy
  namespace: K8S_APP_NAMESPACE_TO_REPLACE
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  revisionHistoryLimit: 2147483647
  selector:
    matchLabels:
      app: uec-dos-api-cs-proxy
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: uec-dos-api-cs-proxy
    spec:
      serviceAccountName: SERVICE_ACCOUNT_NAME_TO_REPLACE
      containers:
        - env:
            - name: INSTANA_AGENT_HOST
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
          image: DOCKER_REGISTRY_TO_REPLACE/proxy:PROXY_VERSION_TO_REPLACE
          imagePullPolicy: Always
          name: uec-dos-api-cs-proxy
          ports:
            - containerPort: 443
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            httpGet:
              path: /health
              port: 443
              scheme: HTTPS
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 30
            successThreshold: 1
            httpGet:
              path: /health
              port: 443
              scheme: HTTPS
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: "0"
              memory: "0"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 0
      terminationGracePeriodSeconds: 30
status: {}
