deployment/stacks/service/base/template/proxy/uec-dos-api-cs-proxy-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uec-dos-api-cs-proxy-cluster-ip-service
  namespace: K8S_APP_NAMESPACE_TO_REPLACE
  labels:
    app: uec-dos-api-cs-proxy
spec:
  type: ClusterIP
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  selector:
    app: uec-dos-api-cs-proxy
