deployment/stacks/service/base/template/proxy/uec-dos-api-cs-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    objectType: service
  name: uec-dos-api-cs-proxy-service
  namespace: K8S_APP_NAMESPACE_TO_REPLACE
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: ClusterIP
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  selector:
    app: uec-dos-api-cs-proxy
